# dq-synth

./: .gitignore  CLAUDE.md  README.md  demo.sh  pyproject.toml  requirements.txt  verify.py
dq_synth/: __init__.py  cli.py  defects.py  generators.py  manifest.py  writer.py
